fixing the spacing in solarsystem

--- a/solarsystem.css
+++ b/solarsystem.css
@@ -197,6 +197,8 @@ section:nth-child(3) {
 }
 
 body {
+    margin-left: 1%;
+    margin-right: 1%;
     font-family: Space Grotesk;
     background-color: rgb(0, 0, 0); 
     flex: 1;display: flex;
